# tetris

./: .gitignore  CMakeLists.txt  README.md  cmake_guide.md
include/: Piece.h  Renderer.h  additional.h  board.h  game.h  panel.h  piece-o.h  piece.h  renderer.h
src/: board.cpp  game.cpp  main.cpp  panel.cpp  piece-o.cpp  piece.cpp  renderer.cpp
tetris/: .gitignore  first_attempt  first_attempt.cpp  matrix  matrix.cpp
